Changelog
=========

2.6 (unreleased)
----------------

- Removed yahooapi from IGeoSettings in Plone registry
  [gborelli]

- Changed content types vocabulary in order
  to list only archetypes content types
  [valentinaB]


2.5 (2013-01-28)
----------------

* added travis-ci configurations [gborelli]
* integrated test_schema in test_doctests [gborelli]
* moved TestRequest to testing module [gborelli]
* refactored tests in order to use plone.app.testing [gborelli]
* Added standard .gitignore [lgraf]
* Updated Italian translation [gborelli]
* Fixed titles and descriptions of various settings fields. Note: this will
  probably break translations [gborelli]
* Added German translation [Denis Krienbühl]


2.4 (2012-02-11)
----------------

* Added pt_BR translation [davilima6]
* Fixed tests [gborelli]
* Added French translation [Fabien Moret]
* Added Danish translation [stonor]


0.2.3 (2011-09-05)
------------------

* added support for Spanish translations [macagua]
* Updated testing to check for the presence of all style fields.
  [davidjb]
* Add map_width and map_height fields to styles interface for setting
  the height and width of collective.geo maps. Included upgrade step for
  GenericSetup profile.
  [davidjb]
* Add GenericSetup upgrade profile to handle upgrading plone.app.registry
  configuration with new property. Users with any previous versions
  of collective.geo.settings need to run the upgrade setup under
  portal_setup. [davidjb]
* Changed GenericSetup profile version number to be whole integers rather than
  package version number. [davidjb]
* added map_viewlet_position property in IGeoFeatureStyle [gborelli]
* added mapviewletmanagers vocabulary [gborelli]
* added map_viewlet_managers property [gborelli]
* plone 4.1 fixes [gborelli]
* changed Browser import from Testing.testbrowser [gborelli]
* added z3c.autoinclude entry point [gborelli]

0.2.2 (2010-12-28)
------------------

* Added dutch translations [robgietema]


0.2.1 (2010-11-13)