@@ -1,1 +1,14 @@
 PROJECTNAME = "collective.geo.settings"
+
+GEO_STYLE_FIELDS = [
+    'use_custom_styles',
+    'marker_image',
+    'map_viewlet_position',
+    'marker_image_size',
+    'map_width',
+    'linecolor',
+    'map_height',
+    'polygoncolor',
+    'display_properties',
+    'linewidth',
+]
